fix separator size on mobile

--- a/acf-blocks/facts-block/facts-block.scss
+++ b/acf-blocks/facts-block/facts-block.scss
@@ -93,6 +93,7 @@
                 background-color: $font-color;
                 border-radius: 0.2rem;
                 margin: 2.8rem auto 4rem auto;
+                max-width: 10ch;
 
 
                 @media (min-width: 768px) {
